--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # steps for building assets
-      - run: tar -C src -cJf unraid-tailscale-utils-${{ github.event.release.name}}.txz *
+      - run: tar -C src -cJf unraid-tailscale-utils-${{ github.event.release.name}}.txz .
 
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
