--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # steps for building assets
-      - run: cd src && tar -cJf unraid-tailscale-utils-${{ github.event.release.name}}.txz .
+      - run: |
+          cd src
+          tar -cJf unraid-tailscale-utils-${{ github.event.release.name}}.txz .
 
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
