--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
 
       - run: |
           cd src
-          tar -cJf unraid-tailscale-utils-${{ github.event.release.name}}.txz *
+          tar -cJf ../unraid-tailscale-utils-${{ github.event.release.name}}.txz *
 
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
