--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,10 @@ jobs:
 
       - run: |
           cd src
-          tar -cJf ../unraid-tailscale-utils-${{ github.event.release.name}}.txz *
+          tar -cJf ../unraid-tailscale-utils-${{ github.event.release.name}}-noarch-1.txz *
 
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: unraid-tailscale-utils-${{ github.event.release.name}}.txz
+          asset_path: unraid-tailscale-utils-${{ github.event.release.name}}-noarch-1.txz
   
