feat: add usage data collection

--- a/src/usr/local/emhttp/plugins/tailscale/settings.json
+++ b/src/usr/local/emhttp/plugins/tailscale/settings.json
@@ -2,5 +2,9 @@
 	"INCLUDE_INTERFACE": {
 		"default": "1",
 		"description": "Adds tailscale interface to Unraid services"
+	},
+    "USAGE": {
+		"default": "1",
+		"description": "Allow collection of usage data"
 	}
 }
