--- a/src/usr/local/emhttp/plugins/tailscale/settings.json
+++ b/src/usr/local/emhttp/plugins/tailscale/settings.json
@@ -15,6 +15,10 @@
 		"default": "0",
 		"description": "Use routes from the tailnet"
 	},
+	"SSH": {
+		"default": "0",
+		"description": "Enable SSH in Tailscale Admin Console"
+	},
     "SYSCTL_IP_FORWARD": {
 		"default": "0",
 		"description": "Enable IP forwarding in sysctl"
