--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,11 @@
-on: [push, pull_request]
-name: Main
+name: Commit Quality
+
+on:
+  push:
+    branches:
+      - 'main'
+  pull_request:
+
 jobs:
   php-cs-fixer:
     name: PHP-CS-Fixer
@@ -8,3 +14,26 @@ jobs:
     - uses: actions/checkout@v3
     - name: PHP-CS-Fixer
       uses: docker://oskarstark/php-cs-fixer-ga
+  commitlint:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: Install commitlint
+        run: |
+          npm install -g commitlint
+          npm install -g "@commitlint/config-conventional"
+
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Validate current commit (last commit) with commitlint
+        if: github.event_name == 'push'
+        run: npx commitlint --from HEAD~1 --to HEAD --verbose
+
+      - name: Validate PR commits with commitlint
+        if: github.event_name == 'pull_request'
+        run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
