feat: add option to disable tailscaled
Signed-off-by: Derek Kaser <derek.kaser@gmail.com>

--- a/src/usr/local/emhttp/plugins/tailscale/settings.json
+++ b/src/usr/local/emhttp/plugins/tailscale/settings.json
@@ -22,5 +22,9 @@
   "SYSCTL_IP_FORWARD": {
     "default": "0",
     "description": "Enable IP forwarding in sysctl"
+  },
+  "ENABLE_TAILSCALE": {
+    "default": "1",
+    "description": "Tailscale enabled"
   }
 }
