feat: add option to change wireguard port
Signed-off-by: Derek Kaser <derek.kaser@gmail.com>

--- a/src/usr/local/emhttp/plugins/tailscale/settings.json
+++ b/src/usr/local/emhttp/plugins/tailscale/settings.json
@@ -26,5 +26,9 @@
   "ENABLE_TAILSCALE": {
     "default": "1",
     "description": "Tailscale enabled"
+  },
+  "WG_PORT": {
+    "default": "41641",
+    "description": "Port for Wireguard connections"
   }
 }
